# cine-brain

./: .env  .gitignore  README.md  directory.py  hello.py  pyproject.toml  requirement.md  setup.py  todo.txt
docs/: overview.md  setup.md  usage.md
scripts/: export_examples.py  ingest_movies_db.py  seed_sample_scripts.py
src/agents/: agents.py  dialogue_writer.py  idea_validator.py  plot_consistency_checker.py  vibe_matcher.py
src/config/: agents_config.yaml  configuration.py  execeptions.py  logger.py  settings.py
src/graph/: edges.py  flow.py  graph.py  nodes.py  state.py
src/integrations/: box_office_predictor.py  emotion_analyzer.py  imdb_api.py  llm_wrappers.py  trope_detector.py
src/interfaces/chainlit/: app.py
src/interfaces/cli/: chat_ui.py  run.py
src/interfaces/web/: api_server.py
src/llm/: llm.py
src/memory/: memo_memory.py  memory_manager.py  vector_store.py
src/prompts/: dialogue_prompts.py  idea_validation_prompts.py  planner_module.py  prompts.py  trope_match_prompts.py
src/tools/: box_office_predictor.py  imdb_api.py  text_speech.py  text_video.py  web_serch.py  web_tools.py
src/utils/: chains.py  helpers.py  routing.py  text_cleaner.py  text_speech.py  timing.py
